--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						</li>
 						<li class="nav-item @@contact__active">
 							<a class="nav-link" href="contact.html">Contact</a>
-							<a class="nav-link" href="Health bot.html">Health bot</a>
+							<a class="nav-link" href="bot.html">bot service</a>
 						</li>
 						<li class="nav-item ml-4">
 							
